Add icon of website

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8"/>
-    <title>Y.U.I. SITE</title>
+    <title>PIANO-SITE</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="icon" type="image/png" href="icon of piano.png">
 </head>
     
 <body>
